# cppTestProj

./: CMakeLists.txt  README.MD  opengl_arrow_a.cpp  opengl_arrow_b.cpp  run.py
Cpp/base/: CMakeLists.txt  VarList.cpp  cnString.cpp  macroDefine.cpp  sizeof.cpp  stbImage.cpp  template.cpp  templateSpecialization.cpp
Cpp/template/: CMakeLists.txt  Reademe.md  SFINAE.cpp  baseTemplate.cpp  baseTemplate.inl  templatePartitialSpecialization.cpp  templateSpecialization.cpp
Dump/: CMakeLists.txt  README.md  dumpInProcess.cpp  dumpOutProcess.cpp
Dump/QtBreakPadDumpTest/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QBreakpad.cpp  QBreakpad.h  QBreakpadPrivate.cpp  QBreakpadPrivate.h  WindowsDllInterceptor.h  main.cpp
Log/: CMakeLists.txt
Log/googleLog/: CMakeLists.txt  README.md  glogText.cpp  log.h
Log/log4cplus_test/: CMakeLists.txt  log.properties  main.cpp  xxLog.cpp  xxLog.h
Math/: CMakeLists.txt
Math/CGAL/: 3d_convex_hull.cpp  CMakeLists.txt  README.md  affine_transformations.cpp  alpha_shapes.cpp  arrangement_dcel.cpp  arrangements.cpp  baseA.cpp  boolean_operations.cpp  bounding_volumes.cpp  convex_decomposition.cpp  convex_hull.cpp  convex_hull_3d.cpp  delaunay_refinement.cpp  exact.cpp  intersection.cpp  kernel_basic.cpp  mesh_generation.cpp  mesh_processing.cpp  nearest_neighbors.cpp  offset_polygon.cpp  point_in_polygon.cpp  point_location.cpp  point_set_2d.cpp  point_set_3d.cpp  point_set_processing.cpp  points_and_segment.cpp  polygon_mesh_processing.cpp  polygon_operations.cpp  polygon_partition.cpp  segment_tree.cpp  spatial_searching.cpp  straight_skeleton.cpp  surprising.cpp  triangulation_2d.cpp  triangulation_3d.cpp  volume_mesh.cpp  voronoi_diagram.cpp  weighted_delaunay.cpp
Math/Eigen/: CMakeLists.txt  matrixBase.cpp  vectorBase.cpp
Math/Eigen/EigeOrthGL/: CMakeLists.txt  glOrth.cpp
Math/OpenCASCADE/: CMakeLists.txt  CreateBox.cpp  CreateCubeSaveSTL.cpp  baseA.cpp  readme.MD  stpMode.cpp
OSG/Base/: CMakeLists.txt  ball.cpp
OpenCV/: CMakeLists.txt
OpenCV/ImgProcess/: CMakeLists.txt
OpenCV/ImgProcess/include/: ImgProcess.h
OpenCV/ImgProcess/src/: ImgProcess.cpp
OpenCV/ImgProcess/test/: QtOpenCVTest_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pyFunction.h  pyFunction.py
OpenGL/: CMakeLists.txt  ChunkLines.cpp
OpenGL/Base/: BufferStorage.cpp  BufferSubData.cpp  CMakeLists.txt  Checkerboard.cpp  DrawNum.cpp  DrawPoint.cpp  FramebufferDemo.cpp  MapBufferRange.cpp  OffscreenScreenshotTriangle.cpp  Readme.md  StencilBuffer.cpp  StencilOutline.cpp  StencilTest.cpp  Tex.cpp  TriangleInstance.cpp  VaoUse2Vbo.cpp  dymicZoom.cpp
OpenGL/Base/3.3/: CMakeLists.txt  Checkerboard.cpp  DrawNum.cpp  DrawPoint.cpp  FramebufferDemo.cpp  MapBufferRange.cpp  MultiLineSegmentsIndirect.cpp  OffscreenScreenshotTriangle.cpp  Orphaning.cpp  StencilBuffer.cpp  StencilOutline.cpp  StencilTest.cpp  Tex.cpp  TriangleInstance.cpp  VaoUse2Vbo.cpp  glMultiDrawArraysPLines.cpp  glMultiDrawArraysPLinesEx.cpp  glMultiDrawArraysTri.cpp
OpenGL/Base/4/: CMakeLists.txt  Orphaning.cpp  UiOrthoMatrix.cpp  (+3 more)
OpenGL/Base3D/: CMakeLists.txt  ProjectPickUp.cpp  ProjectPickUpConcavePolygon.cpp  ProjectPickUpLine.cpp  ProjectPickUpRay.cpp
OpenGL/Bezier/: CMakeLists.txt  bezier.h  bezier_curve.cpp  bezier_curve_outpt.cpp
OpenGL/Curve/: Bspline.cpp  bezier_curve.cpp  bezier_curve_outpt.cpp
OpenGL/DashLine/: CMakeLists.txt  baseC.cpp  baseEBO.cpp  basePrimitiveRestar.cpp  basePrimitiveRestarBuffer.cpp  basePrimitiveRestarBufferGPUBezier.cpp
OpenGL/DynamicLines/: BufferStorage.cpp  BufferStorage_Tri_4.cpp  BufferSubData.cpp  BufferSubDataDymicLines.cpp  BufferSubDataPolylines.cpp  BufferSubData_DymicLines3.cpp  BufferSubData_Plines3.cpp  BufferSubData_Tri_3.cpp  CMakeLists.txt  LargeLines.cpp  LargeLines2.cpp  LargeLines3.cpp  LargeLines4.cpp  LargeLines6.cpp  LargeLines7.cpp  LargeLines8.cpp  LargeLines_BufferSubDataEx2_3.cpp  LargeLines_BufferSubDataEx_3.cpp  LargeLines_BufferSubData_3.cpp  LargeLines_MultiDrawArraysIndirect_3.cpp  LargeLines_RTree_GS_3.cpp  glBufferStorage_4.cpp
OpenGL/Image/: CMakeLists.txt  image.cpp
OpenGL/LineType/: CMakeLists.txt  ThickPolylineA.cpp  ThickPolylineB.cpp  baseA.cpp  baseB.cpp  baseC.cpp  baseEBO.cpp  basePrimitiveRestar.cpp  basePrimitiveRestarBuffer.cpp  basePrimitiveRestarBufferGPUBezier.cpp  opengl_arrow_a.cpp  opengl_arrow_b.cpp  shader_bezier_circle.cpp
OpenGL/MousePickup/: CMakeLists.txt  ProjectPickUp.cpp  ProjectPickUpConcavePolygon.cpp  ProjectPickUpLine.cpp  ProjectPickUpRay.cpp
OpenGL/QtGL_View_Zoom/: CMakeLists.txt
OpenGL/Text/: BatchText.cpp  CMakeLists.txt  DynamicCn.cpp  StaticAscii.cpp  StaticCn1.cpp  StaticCn2.cpp  ai_test_text_cn.cpp  fragment_shader.glsl  freetype_cn.cpp  gl_freetypeGL_cn.cpp  gl_freetype_outlineText.cpp  gl_stb_ttf.cpp  gl_stb_ttf_earcut_fill.cpp  gl_stb_ttf_fill.cpp  gl_stb_ttf_outline.cpp  gl_stb_ttf_outlineText.cpp  vertex_shader.glsl
Qt/: CMakeLists.txt
Qt/QtGLWithGTest/: CMakeLists.txt
Qt/QtGl/: CMakeLists.txt  DoubleBuffer.cpp
Qt/QtLibExportProj/: CMakeLists.txt
Qt/VBOManager/: CMakeLists.txt
Skia/: CMakeLists.txt  SkiaCircleWidget.cpp  SkiaCircleWidget.h  main.cpp
boost/: CMakeLists.txt  readme.md
boost/doc/: README.md
boost/machine_status/: CMakeLists.txt  Contex.cpp  Event.h  State.cpp  main.cpp
googleLog/: CMakeLists.txt  README.md  glogText.cpp  log.h
log4cplus_test/: CMakeLists.txt  LogUtils.h  LotUtils.cpp  log.properties  main.cpp
protobuf/: CMakeLists.txt  baseinfoObj.h  dynamicParse.cpp  messageObj.h  read.cpp  write.cpp
protobuf/proto/: addressbook.proto  all.proto  baseInfo.proto  info.proto  message.proto  person.proto  sylar.proto
pyBindCpp/: CMakeLists.txt
pyBindCpp/callCpp/: CMakeLists.txt  README.md  callCpp.py  example.cpp  main.cpp.md
pyBindCpp/callNumpy/: CMakeLists.txt  main.cpp  nums.py
pyBindCpp/callPy/: CMakeLists.txt  my_module.cpp  python_script.py
pyBindCpp/callPy1/: CMakeLists.txt  main.cpp
pyBindCpp/callPy2/: CMakeLists.txt
pyBindCpp/callPyDPI/: CMakeLists.txt  PyDPI.py  main.cpp
(+217 files in other folders)
